[package]
name = "dungeonator-rs"
version = "0.1.0"
authors = ["Benjamin Hinchliff <benjamin.hinchliff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
git2 = "0.13"
cmake = "0.1"
bindgen = "0.56"
